# OrbbecSDKSample

./: LICENSE  README.md
sample/c/: CMakeLists.txt  orbbec.hpp
sample/c/color/: FindOrbbecSDK.cmake  orbbec.cpp  util.h
sample/c/depth/: CMakeLists.txt  orbbec.cpp  orbbec.hpp
sample/c/infrared/: CMakeLists.txt  orbbec.cpp  orbbec.hpp
sample/c/playback/: CMakeLists.txt  orbbec.cpp  orbbec.hpp
sample/c/point_cloud/: CMakeLists.txt  main.cpp  orbbec.cpp  orbbec.hpp
sample/c/record/: CMakeLists.txt  check_error.h  orbbec.cpp  orbbec.hpp
sample/c/sync_align/: CMakeLists.txt  orbbec.cpp  orbbec.hpp
sample/cpp/color/: CMakeLists.txt  orbbec.cpp  orbbec.hpp  util.h
sample/cpp/depth/: CMakeLists.txt  orbbec.cpp  orbbec.hpp
sample/cpp/infrared/: CMakeLists.txt  orbbec.cpp  orbbec.hpp
sample/cpp/playback/: CMakeLists.txt  orbbec.cpp  orbbec.hpp
sample/cpp/point_cloud/: CMakeLists.txt  orbbec.cpp  orbbec.hpp
sample/cpp/record/: CMakeLists.txt  orbbec.cpp  orbbec.hpp
sample/cpp/sync_align/: CMakeLists.txt  orbbec.cpp  orbbec.hpp
